--- a/src/main/webapp/guess.xhtml
+++ b/src/main/webapp/guess.xhtml
@@ -5,7 +5,7 @@
 <h:head></h:head>
 <h:body>
     <h:form id="guess_form">
-        <p:outputLabel style= "display: none;" > siu </p:outputLabel>
+        <p:outputLabel > siu </p:outputLabel>
         <p:inputText id = "intento" type="int" binding="#{input}"/>
         <br></br>
         <p:outputLabel>Intentos="#{guessBean.getIntentos()}"</p:outputLabel>
