--- a/src/main/webapp/guess.xhtml
+++ b/src/main/webapp/guess.xhtml
@@ -1,22 +1,201 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3c.org/1999/xhtml"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
-<h:head></h:head>
+
+<style type = "text/css">
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+	body {
+		width: 100%;
+		height:100%;
+		font-family: 'Candara';
+		font-size: 24px;
+		color: white;
+		-webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+	}
+
+    div.a {
+		position: absolute;
+		top: 50%;
+		left: 40%;
+		margin: -150px 0 0 -150px;
+		width:600px;
+		height:350px;
+		background-color: rgba(30,30,30,0.9);
+		display: flex;
+        justify-content: center;
+        align-items: center;
+	}
+
+	div.b{
+		font: oblique bold 120% cursive;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-weight: 800;
+	}
+
+	div.c{
+	    display: flex;
+        justify-content: center;
+        align-items: center;
+	}
+
+    .buttons {
+        margin: 10%;
+        text-align: center;
+    }
+
+    .btn-hover {
+        width: 200px;
+        font-size: 16px;
+        font-weight: 600;
+        color: #fff;
+        cursor: pointer;
+        height: 55px;
+        text-align:center;
+        border: none;
+        background-size: 300% 100%;
+
+        border-radius: 50px;
+        moz-transition: all .4s ease-in-out;
+        -o-transition: all .4s ease-in-out;
+        -webkit-transition: all .4s ease-in-out;
+        transition: all .4s ease-in-out;
+    }
+
+    .btn-hover:hover {
+        background-position: 100% 0;
+        moz-transition: all .4s ease-in-out;
+        -o-transition: all .4s ease-in-out;
+        -webkit-transition: all .4s ease-in-out;
+        transition: all .4s ease-in-out;
+    }
+
+    .btn-hover:focus {
+        outline: none;
+    }
+
+    .btn-hover.color-1 {
+        background-image: linear-gradient(to right, #29323c, #485563, #2B7644, #43764C);
+        box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
+    }
+
+	li{
+	    display: inline;
+	    padding-right: 26px;
+	}
+
+	h1{
+	    color: black;
+	    font-size: 56px;
+	}
+
+	svg {
+        display: block;
+        font: 10.5em 'Montserrat';
+        width: 960px;
+        height: 300px;
+        margin: 0 auto;
+    }
+
+    .text-copy {
+        fill: none;
+        stroke: white;
+        stroke-dasharray: 6% 29%;
+        stroke-width: 5px;
+        stroke-dashoffset: 0%;
+        animation: stroke-offset 5.5s infinite linear;
+    }
+
+    .text-copy:nth-child(1){
+        stroke: #FFFFFF;
+        animation-delay: -1;
+    }
+
+    .text-copy:nth-child(2){
+        stroke: #2FB826;
+        animation-delay: -2s;
+    }
+
+    .text-copy:nth-child(3){
+        stroke: #FFFFFF;
+        animation-delay: -3s;
+    }
+
+    .text-copy:nth-child(4){
+        stroke: #8B8B8B;
+        animation-delay: -4s;
+    }
+
+    .text-copy:nth-child(5){
+        stroke: #8B8B8B;
+        animation-delay: -5s;
+    }
+
+    @keyframes stroke-offset{
+        100% {stroke-dashoffset: -35%;}
+    }
+
+    div.t{
+		top: 9%;
+		left: 24%;
+		position: absolute;
+		width:800px;
+		height:100px;
+		background-color: rgba(30,30,30,0.9);
+    }
+
+
+</style>
+
+<h:head>
+</h:head>
 <h:body>
+    <body background="fondo.jpg">
+    <div class="t">
+        <svg viewBox="255 320 3000 300">
+            <symbol id="s-text">
+                <text text-anchor="middle" x="50%" y="80%">Adivina El Número</text>
+            </symbol>
+
+            <g class = "g-ants">
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+            </g>
+        </svg>
+    </div>
+
+    <div class="a">
+
     <h:form id="guess_form">
-        <p:outputLabel > siu </p:outputLabel>
-        <p:inputText id = "intento" type="int" binding="#{input}"/>
-        <br></br>
-        <p:outputLabel>Intentos="#{guessBean.getIntentos()}"</p:outputLabel>
-        <br></br>
-        <p:outputLabel>Estado juego ="#{guessBean.getEstado()}"</p:outputLabel>
-        <br></br>
-        <p:outputLabel>Premio acumulado="#{guessBean.getPremioAcumulado()}"</p:outputLabel>
-        <br></br>
-        <p:commandButton update="guess_form" actionListener="#{guessBean.guess(input.value)}"></p:commandButton>
-        <br></br>
-        <p:commandButton update="guess_form" actionListener="#{guessBean.restart()}"></p:commandButton>
+        <div class="b">
+            <p:outputLabel style= "display: none;" > </p:outputLabel>
+            <p:inputText id = "intento" type="int" binding="#{input}" placeholder="Ingrese un número"/>
+            <br></br>
+            <p:outputLabel>Intentos = "#{guessBean.getIntentos()}"</p:outputLabel>
+            <br></br>
+            <p:outputLabel>Estado juego = "#{guessBean.getEstado()}"</p:outputLabel>
+            <br></br>
+            <p:outputLabel>Premio acumulado = "#{guessBean.getPremioAcumulado()}"</p:outputLabel>
+        </div>
+        <div class="c">
+        <ul>
+            <li><h:commandButton class = "btn-hover color-1" value ="Intentar" update="guess_form" actionListener="#{guessBean.guess(input.value)}"> </h:commandButton></li>
+            <li><h:commandButton class = "btn-hover color-1" value = "Reiniciar" update="guess_form" actionListener="#{guessBean.restart()}"> </h:commandButton></li>
+        </ul>
+        </div>
     </h:form>
+    </div>
+    </body>
 </h:body>
 </html>
